--- a/android/build.gradle
+++ b/android/build.gradle
@@ -95,5 +95,16 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  
+  // To recognize Latin script
+  implementation 'com.google.mlkit:text-recognition:16.0.0'
+  // To recognize Chinese script
+  implementation 'com.google.mlkit:text-recognition-chinese:16.0.0'
+  // To recognize Devanagari script
+  implementation 'com.google.mlkit:text-recognition-devanagari:16.0.0'
+  // To recognize Japanese script
+  implementation 'com.google.mlkit:text-recognition-japanese:16.0.0'
+  // To recognize Korean script
+  implementation 'com.google.mlkit:text-recognition-korean:16.0.0'  
 }
 
