feat(android): working on mlkit

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -63,7 +63,6 @@ android {
   defaultConfig {
     minSdkVersion getExtOrIntegerDefault("minSdkVersion")
     targetSdkVersion getExtOrIntegerDefault("targetSdkVersion")
-
   }
 
   buildTypes {
@@ -74,6 +73,7 @@ android {
 
   lintOptions {
     disable "GradleCompatible"
+    abortOnError false
   }
 
   compileOptions {
@@ -95,16 +95,16 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  
+
   // To recognize Latin script
-  implementation 'com.google.mlkit:text-recognition:16.0.0'
+  implementation 'com.google.mlkit:text-recognition:16.0.1'
   // To recognize Chinese script
-  implementation 'com.google.mlkit:text-recognition-chinese:16.0.0'
+  implementation 'com.google.mlkit:text-recognition-chinese:16.0.1'
   // To recognize Devanagari script
-  implementation 'com.google.mlkit:text-recognition-devanagari:16.0.0'
+  implementation 'com.google.mlkit:text-recognition-devanagari:16.0.1'
   // To recognize Japanese script
-  implementation 'com.google.mlkit:text-recognition-japanese:16.0.0'
+  implementation 'com.google.mlkit:text-recognition-japanese:16.0.1'
   // To recognize Korean script
-  implementation 'com.google.mlkit:text-recognition-korean:16.0.0'  
+  implementation 'com.google.mlkit:text-recognition-korean:16.0.1'  
 }
 
